# QB_surveillance_software_Ubuntu

./: .gitignore  CMakeLists.txt  Testing.iss  install_service.sh  main.py  note.txt  postinst  postrm  preinst  qb.desktop  qb.service  qb.spec  requirements.txt  router.py  settings.py  testing.py  to-uninstall.txt
